--- a/app/assets/stylesheets/flats.scss
+++ b/app/assets/stylesheets/flats.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the flats controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.margin-top-negative {
+  margin-top: -75px;
+}
+
+.height-extra {
+  height: 400px;
+}
+
+.flat-show-card {
+  border-radius: 3px;
+  background-color: #F8F9FA;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.center-btn {
+  margin: 0 auto;
+}
