--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -4,6 +4,7 @@
   <%= f.input :description %>
   <%= f.input :number_of_guests %>
   <%= f.input :price_per_night %>
-  <%= f.button :submit, "Add Flat", class: "btn btn-primary" %>
+  <%= f.input :flat_img %>
+  <%= f.button :submit, class: "btn btn-primary" %>
   <%= link_to "Cancel", new_flat_path, class: "btn btn-secondary" %>
 <% end %>
