--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,17 +1,19 @@
-<div class="row">
-  <div class="col">
-    <h1>All our Flats</h1>
-  </div>
-</div>
-<div class="row">
-  <div class="col">
-    <p>All <%= @flats.count %> flats.</p>
-  </div>
-</div>
-<div class="row">
-  <% @flats.each do |flat| %>
-    <div class="col-lg-4 col-md-6 col-sm-12">
-      <%= render "flat_card", flat: flat %>
+<div class="container mt-5 pt-5">
+  <div class="row">
+    <div class="col">
+      <h1>All our Flats</h1>
     </div>
-  <% end %>
+  </div>
+  <div class="row">
+    <div class="col">
+      <p>All <%= @flats.count %> flats.</p>
+    </div>
+  </div>
+  <div class="row">
+    <% @flats.each do |flat| %>
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <%= render "flat_card", flat: flat %>
+      </div>
+    <% end %>
+  </div>
 </div>
